# spkc-ehr-schema

./: .env.example  .env_example  .gitignore  DEVELOPMENT_HISTORY.md  POETRY_GUIDE.md  README.md  airtable_schema.py  airtable_schema_test.py  config.py  dependencies.txt  document_filling.py  models.py  name_matching.py  os_utils.py  plan.md  pyproject.toml  release.sh  requirements.txt  setup-codeartifact.sh  speakcare.py  speakcare_api_test.py  speakcare_app.py  speakcare_architecture_diagram.md  speakcare_architecture_diagram_simplified.md  speakcare_audio.py  speakcare_backend.py  speakcare_emr.py  speakcare_emr_api.py  speakcare_emr_api_test.py  speakcare_emr_schema.py  speakcare_emr_schema_test.py  speakcare_emr_test.py  speakcare_emr_utils.py  speakcare_emr_utils_test.py  speakcare_high_level_architecture.md  speakcare_logging.py  speakcare_stt.py  speakcare_text_processor.py  speakcare_transcript_processor.py  speakcare_transcriptions.py  (+7 more)
.github/workflows/: ci.yml  manual-publish.yml  release.yml
arch/: project_plan.md  speakcare_high_level_architecture.md
backend/: .cursorrules  .env.ec2.example  .env_example  .gitignore  __init__.py  airtable_schema.py  airtable_schema_test.py  boto3_session.py  config.py  db_connect.sh  dependencies.txt  document_filling.py  ec2_connect.sh  ec2_run.sh  json_key_analyzer.py  models.py  name_matching.py  name_matching_test.py  os_utils.py  pcc_assessment_schema.py  pcc_assessment_schema_test.py  pdf2airtable.py  requirements.txt  run_demo.sh  run_server.sh  schema_converter_engine.py  schema_converter_engine_test.py  schema_engine_test.py  scp_to_ec2.sh  speakcare.py  speakcare_airtable_api.py  speakcare_airtable_schema.py  speakcare_audio.py  speakcare_backend.py  speakcare_backend_app.py  speakcare_charting.py  speakcare_db_create.py  speakcare_demo.py  speakcare_demo_backend.py  speakcare_diarize.py  (+40 more)
backend/pcc/: pcc_assessment_schema.py  pcc_assessment_schema_test.py
backend/pcc/asmnt_templates/: MHCS_IDT_5_Day_Section_GG.json  MHCS_Nursing_Admission_Assessment_-_V_5.json  MHCS_Nursing_Daily_Skilled_Note.json  MHCS_Nursing_Weekly_Skin_Check.json  pcc_assessment_api_scratchpad.txt
backend/pcc/assmnt_templates/: MHCS_Nursing_Admission_Assessment_-_V_5.json
backend/tests/: blood_pressures.json  doctors.json  fall_risk_screen.json  fall_risk_screen_section_1.json  nurses.json  patients.json  speakcare_test_utils.py  table_schemas.py  test_name_matching.py  weights.json
backend/tools/: test_patient_name_extraction.py
charts/holyname/: NursingAssessment.json  NursingAssessment.xml  harmony_to_airtable_convert.py
charts/pcc/: .gitignore  pcc_pdf_to_airtable.py
deploy/: .env.example  DEPLOYMENT.md  api_cert.sh  app.py  build_lambda_functions.sh  cdk.json  cdk_app.py  deploy_customer.sh  deploy_customer_test.sh  dns_and_cert.sh  get_cert.py  recording_handlers_test.sh  requirements.txt  run_cdk.sh  todo.md
deploy/api/: watch-endpoints-openapi.yaml
deploy/cdk/: customer_stack.py  swagger_html_generator.py  test_swagger_generator.py
deploy/lambda/: recording_handler.py  recording_update_handler.py
deploy/lambda/docs_handler/: docs_handler.py  test_docs_handler.py
deploy/lambda/nurse_handler/: nurse_handler.py  test_nurse_handler.py
deploy/lambda/recording_handler/: recording_handler.py
deploy/lambda/recording_update_handler/: recording_update_handler.py
deploy/lambda/shared/: __init__.py  audio_validator.py  shared_config.py
deploy/lambda/shift_handler/: audio_processor.py  models.py  requirements.txt  shared_config.py  shift_handler.py  shift_start_processor.py  test_shift_handler.py
deploy/lambda/telemetry_handler/: telemetry_handler.py
deploy/lambda/user_handler/: audio_validator.py  test_user_handler.py  user_handler.py
deploy_bash/: deploy_customer.sh  role_trust_lambda_policy.json
deploy_bash/customer-policies/: holyname-lambda-s3-dynamo-policy.json  nursing-lambda-s3-dynamo-policy.json
deploy_bash/lambda/: recording_handler.py  recording_update_handler.py
deploy_customer/: app.py  stack_checklist.md
deploy_customer/cdk/: customer_stack.py
deploy_customer/lambda/recording_handler/: recording_handler.py
deploy_customer/lambda/recording_update_handler/: recording_update_handler.py
frontend/chrome-extension/: .env_example  .gitignore  README.md  pack-extension.js  package.json  tsconfig.json
frontend/chrome-extension/public/: background.js  index.html  manifest.json
frontend/chrome-extension/src/: App.css  App.tsx  index.css  pcc-forms.tsx  pcc-utils.ts  utils.ts
lens/: todo.md
lens/chrome-extension/: pack-lens.js  package.json  tsconfig.json  webpack.config.js
lens/chrome-extension/public/: manifest.json
lense/chrome-extension/: package.json  webpack.config.js
lense/chrome-extension/public/: manifest.json
meter/: todo.md
meter/chrome-extension/: .gitignore  pack-lens.js  pack-meter.js  package.json
meter/chrome-extension/public/: manifest.json  panel.html
project/: compliance_and_audit_high_level.md  project_plan.md  security_architecture.md  speakcare_architecture_diagram.md  speakcare_high_level_architecture.md
src/: csv_to_dict.py  sanitize_text.py  schema_engine.py
src/pcc/: README.md  pcc_assessment_schema.py
src/pcc/assmnt_templates/: MHCS_IDT_5_Day_Section_GG.json  body_parts_response_options.json
src/pcc_schema/: README.md  compare_assessments.py  export_pcc_schemas.py  n_adv_questions.py  pcc_assessment_schema.py
src/pcc_schema/assmnt_templates/: MHCS_Nursing_Admission_Assessment_-_V 6.json  MHCS_Nursing_Admission_Assessment_-_V_5.json  MHCS_Nursing_Monthly_Summary.json  MHCS_Nursing_Section_GG.json  Unknown_Table.json  (+3 more)
src/schema_engine/: csv_to_dict.py  schema_engine.py
tests/: gemini_client.py  gemini_openai_client.py  openai_client.py  schema_engine_test.py  test_csv_to_dict.py  test_n_adv_questions.py  test_sanitize_text.py
tests/pcc/: pcc_assessment_schema_test.py  test_compare_assessments.py  test_pcc_enrichment_from_csv.py
transcriptions/: admission.txt
utils/: ocr2airtable.py  pdf2airtable.py  requirements.txt  xml2json.py
(+59 files in other folders)
