[tool.poetry]
name = "speakcare-demo"
version = "0.1.0"
description = "SpeakCare Demo - AI-powered healthcare voice processing system"
authors = ["SpeakCare Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.13"
aiofiles = "24.1.0"
aniso8601 = "10.0.1"
annotated-types = "0.7.0"
anyio = "4.10.0"
asgi-csrf = "0.11"
asgiref = "3.9.1"
attrs = "25.3.0"
audioop-lts = "0.2.2"
audioread = "3.0.1"
blinker = "1.9.0"
boto3 = "1.40.27"
botocore = "1.40.27"
build = "1.3.0"
cachetools = "5.5.2"
certifi = "2025.8.3"
cffi = "2.0.0"
charset-normalizer = "3.4.3"
click = "8.1.8"
click-default-group = "1.2.4"
cryptography = "45.0.7"
datasette = "0.65.1"
decorator = "5.2.1"
deepdiff = "8.6.1"
dill = "0.3.6"
distro = "1.9.0"
dnslib = "0.9.26"
dnspython = "2.8.0"
ffmpeg-python = "0.2.0"
filelock = "3.19.1"
flask = "3.1.2"
flask-cors = "6.0.1"
flask-restx = "1.3.0"
flexcache = "0.3"
flexparser = "0.4"
fsspec = "2025.9.0"
future = "1.0.0"
fuzzy = "1.2.2"
google-api-core = "2.25.1"
google-api-python-client = "2.181.0"
google-auth = "2.40.3"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.2"
googleapis-common-protos = "1.70.0"
gtts = "2.5.4"
gunicorn = "23.0.0"
h11 = "0.16.0"
hf-xet = "1.1.9"
httpcore = "1.0.9"
httplib2 = "0.30.0"
httpx = "0.28.1"
huggingface-hub = "0.34.4"
hupper = "1.12.1"
hyperpyyaml = "1.2.2"
idna = "3.10"
importlib-resources = "6.5.2"
inflection = "0.5.1"
iniconfig = "2.1.0"
itsdangerous = "2.2.0"
janus = "2.0.0"
jellyfish = "1.2.0"
jinja2 = "3.1.6"
jiter = "0.10.0"
jmespath = "1.0.1"
joblib = "1.5.2"
jsonpickle = "4.1.1"
jsonschema = "4.25.1"
jsonschema-specifications = "2025.9.1"
lazy-loader = "0.4"
librosa = "0.11.0"
llvmlite = "0.44.0"
localstack = "4.7.0"
localstack-core = "4.7.0"
localstack-ext = "4.7.0"
markdown-it-py = "4.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
mergedeep = "1.3.4"
mpmath = "1.3.0"
msgpack = "1.1.1"
networkx = "3.5"
numba = "0.61.2"
numpy = "1.26.4"
oauthlib = "3.3.1"
openai = "1.107.0"
orderly-set = "5.5.0"
packaging = "25.0"
platformdirs = "4.4.0"
pluggy = "1.6.0"
plux = "1.13.0"
pooch = "1.8.2"
proto-plus = "1.26.1"
protobuf = "6.32.0"
psutil = "7.0.0"
pyairtable = "3.2.0"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pyaudio = "0.2.14"
pycparser = "2.23"
pydantic = "2.11.7"
pydantic-core = "2.33.2"
pydub = "0.25.1"
pygments = "2.19.2"
pyjwt = "2.10.1"
pyotp = "2.9.0"
pyparsing = "3.2.3"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.1"
python-multipart = "0.0.20"
pytz = "2025.2"
pyyaml = "6.0.2"
rapidfuzz = "3.14.1"
referencing = "0.36.2"
requests = "2.32.5"
requests-oauthlib = "2.0.0"
rich = "14.1.0"
rpds-py = "0.27.1"
rsa = "4.9.1"
ruamel-yaml = "0.18.15"
ruamel-yaml-clib = "0.2.12"
s3transfer = "0.14.0"
scikit-learn = "1.7.2"
scipy = "1.16.1"
semver = "3.0.4"
sentencepiece = "0.2.1"
setuptools = "80.9.0"
six = "1.17.0"
sniffio = "1.3.1"
soundfile = "0.13.1"
soxr = "1.0.0"
speechbrain = "1.0.3"
sqlalchemy = "2.0.43"
standard-aifc = "3.13.0"
standard-chunk = "3.13.0"
standard-sunau = "3.13.0"
sympy = "1.14.0"
tabulate = "0.9.0"
tailer = "0.4.1"
threadpoolctl = "3.6.0"
torch = "2.7.1"
torchaudio = "2.7.1"
tqdm = "4.67.1"
typing = "3.7.4.3"
typing-inspection = "0.4.1"
typing-extensions = "4.15.0"
uritemplate = "4.2.0"
urllib3 = "2.5.0"
uvicorn = "0.35.0"
webrtcvad = "2.0.10"
werkzeug = "3.1.3"
yt-dlp = "2025.9.5"
speakcare-common = {git = "https://github.com/speakcare/speakcare-common.git", tag = "v1.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-cov = "7.0.0"
pytest-mock = "3.15.0"
black = "25.1.0"
flake8 = "7.3.0"
mypy = "1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["backend"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"